Adding source and sink taxonomy via a json file